--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>MiPrimerGit</title>
 </head>
 <body>
@@ -11,11 +12,11 @@
         <h1>Mi Primer Github Pages</h1>
     </header>
     <main>
-        <img src="img/GitHub.jpg" alt="logo_github">
+        <img class="logo_git" src="img/GitHub.jpg" alt="logo_github">
     </main>
     <footer>
-        <div>Footer1</div>
-        <div>Footer2</div>
+        <div class="footer1">Footer1</div>
+        <div class="footer2">Footer2</div>
     </footer>
     
 </body>
